# liteaero-flight

./: .gitignore  CLAUDE.md  CMakeLists.txt
docs/algorithms/: README.md
docs/architecture/: README.md  dynamic_element.md  kinematic_state_snapshot.md
docs/dependencies/: README.md
docs/guidelines/: cpp.md  general.md  python.md
docs/installation/: README.md
docs/interfaces/: icds.md
docs/roadmap/: flight_code.md
docs/testing/: strategy.md
include/: KinematicState.hpp
include/control/: Antiwindup.hpp  ControlAltitude.hpp  ControlHeading.hpp  ControlHeadingRate.hpp  ControlLoadFactor.hpp  ControlLoop.hpp  ControlRoll.hpp  ControlVerticalSpeed.hpp  Derivative.hpp  Filter.hpp  FilterFIR.hpp  FilterSS.hpp  FilterSS2.hpp  FilterSS2Clip.hpp  FilterTF.hpp  FilterTF2.hpp  Gain.hpp  Integrator.hpp  Limit.hpp  LimitBase.hpp  RateLimit.hpp  RectilinearTable.hpp  SISOPIDFF.hpp  TableAxis.hpp  Unwrap.hpp  control.hpp  filter_realizations.hpp
include/environment/: TerrainVertex.hpp
include/liteaero/autopilot/: Autopilot.hpp  ControlAltitude.hpp  ControlHeading.hpp  ControlHeadingRate.hpp  ControlLoadFactor.hpp  ControlLoop.hpp  ControlRoll.hpp  ControlVerticalSpeed.hpp
include/liteaero/control/: Antiwindup.hpp  Derivative.hpp  DynamicElement.hpp  Filter.hpp  FilterFIR.hpp  FilterSS.hpp  FilterSS2.hpp  FilterSS2Clip.hpp  FilterTF.hpp  FilterTF2.hpp  Gain.hpp  Integrator.hpp  Limit.hpp  LimitBase.hpp  LimitElement.hpp  RateLimit.hpp  RectilinearTable.hpp  SISOPIDFF.hpp  SisoElement.hpp  TableAxis.hpp  Unwrap.hpp  control.hpp  filter_realizations.hpp  numerics.hpp
include/liteaero/guidance/: ParkTracking.hpp  Path.hpp  PathGuidance.hpp  PathSegmentHelix.hpp  V_PathSegment.hpp  VerticalGuidance.hpp
include/liteaero/log/: ILogger.hpp  LogReader.hpp  LogSource.hpp  Logger.hpp
include/liteaero/nav/: FlowAnglesEstimator.hpp  GeodeticPosition.hpp  KinematicStateSnapshot.hpp  KinematicStateUtil.hpp  NavigationFilter.hpp  WGS84.hpp  WindEstimator.hpp
include/liteaero/terrain/: GeodeticAABB.hpp  GeodeticPoint.hpp  LocalAABB.hpp  Terrain.hpp  TerrainFacet.hpp  TerrainTile.hpp  TerrainVertex.hpp  V_Terrain.hpp
include/navigation/: WGS84.hpp
proto/: CMakeLists.txt  liteaero_flight.proto
src/: CMakeLists.txt  KinematicState.cpp
src/autopilot/: ControlAltitude.cpp  ControlHeading.cpp  ControlHeadingRate.cpp  ControlLoadFactor.cpp  ControlRoll.cpp  ControlVerticalSpeed.cpp
src/control/: Antiwindup.cpp  ControlAltitude.cpp  ControlHeading.cpp  ControlHeadingRate.cpp  ControlLoadFactor.cpp  ControlRoll.cpp  ControlVerticalSpeed.cpp  Derivative.cpp  DynamicElement.cpp  FilterFIR.cpp  FilterSS.cpp  FilterSS2.cpp  FilterSS2Clip.cpp  FilterTF.cpp  FilterTF2.cpp  Integrator.cpp  Limit.cpp  RateLimit.cpp  SISOPIDFF.cpp  SisoElement.cpp  Unwrap.cpp  control.cpp  filter_realizations.cpp  numerics.cpp
src/log/: LogReader.cpp  Logger.cpp
src/nav/: KinematicStateUtil.cpp  WGS84.cpp
src/navigation/: WGS84.cpp
src/terrain/: Terrain.cpp  TerrainTile.cpp
test/: CMakeLists.txt  FilterRealizations_test.cpp  FilterSS2Clip_test.cpp  FilterSS2_test.cpp  FilterSS_test.cpp  FilterTF2_test.cpp  FilterTF_test.cpp  Gain_test.cpp  KinematicState_test.cpp  Limit_test.cpp  RateLimit_test.cpp  RectilinearTable_test.cpp  SISOPIDFF_test.cpp  TableAxis_test.cpp  Terrain_test.cpp  Unwrap_test.cpp  WGS84_test.cpp
test/control/: Antiwindup_test.cpp  CMakeLists.txt  Derivative_test.cpp  FilterFIR_test.cpp  FilterRealizations_test.cpp  FilterSS2Clip_test.cpp  FilterSS2_test.cpp  FilterSS_test.cpp  FilterTF2_test.cpp  FilterTF_test.cpp  Gain_test.cpp  Integrator_test.cpp  Limit_test.cpp  RateLimit_test.cpp  RectilinearTable_test.cpp  SISOPIDFF_test.cpp  TableAxis_test.cpp  Unwrap_test.cpp
test/log/: CMakeLists.txt  Logger_test.cpp
test/nav/: CMakeLists.txt  KinematicStateSnapshot_test.cpp  WGS84_test.cpp
test/terrain/: CMakeLists.txt  TerrainTile_test.cpp  Terrain_test.cpp
